[gd_scene load_steps=7 format=2]

[ext_resource path="res://content/gadgets/transportdrone/TransportDrone.gd" type="Script" id=1]
[ext_resource path="res://content/drop/iron/iron_smol.png" type="Texture" id=2]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=3]
[ext_resource path="res://content/sounds/Locations/Transportdrone/DroneMove.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/Locations/Transportdrone/DroneLift.wav" type="AudioStream" id=5]
[ext_resource path="res://content/gadgets/transportdrone/TransportDroneAnimations.tres" type="SpriteFrames" id=6]

[node name="TransportDrone" type="Node2D" groups=["saveable", "transport_drones"]]
z_index = 20
script = ExtResource( 1 )

[node name="CarriedResource" type="Sprite" parent="."]
position = Vector2( 0, 7 )
texture = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3 )
frames = ExtResource( 6 )
animation = "idle"

[node name="PickupSpot" type="Position2D" parent="."]
position = Vector2( 0, 4 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[node name="MoveAmb" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 4 )
randomVolume = 0.0
maxAudibleDistance = 230.0
minAudibleDistance = 60.0
doppler = 0.15

[node name="PickupSound" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 5 )
maxAudibleDistance = 350.0
minAudibleDistance = 100.0

[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
